<resources>
    <string name="app_name">Oh My Command!</string>

    <!-- Login Activity -->
    <string name="login_btn">Log In</string>
    <string name="signup_btn">Sign Up</string>
    <string name="signup_text">No account yet? Create one</string>
    <string name="error_login">Login Failed. Try Again.</string>

    <!-- Singup Activity -->
    <string name="signup_second_password_hint">Password (Again)</string>
    <string name="signup_register_btn">Create Account</string>
    <string name="signin_text">Already a member? Login</string>
    <string name="password_min">Password Minimum is 7 characters</string>
    <string name="passwords_must_match">Passwords much match</string>

    <!-- Create Acitivity -->
    <string name="create_header">Create New Command</string>
    <string name="create_command">Command</string>
    <string name="create_os">OS</string>
    <string name="create_version">Version</string>
    <string name="create_note">Note</string>
    <string name="create_cancel">Cancel</string>
    <string name="create_add">Create</string>

    <!-- Generic Strings -->
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="are_you_connected">Are you connected to internet?</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="only_letters_and_numbers">Can only contain letters and numbers</string>
    <string name="commands">Commands</string>


    <!-- Preferences -->
    <string name="pref_user_auth_token">token</string>

    <!-- Menu -->
    <string name="logout">Logout</string>
</resources>
