<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pygopar.ohmycommand.CreateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_header"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <!-- Command Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/create_command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/create_command"/>
    </android.support.design.widget.TextInputLayout>

    <!-- OS Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/create_os"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/create_os"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Version Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/create_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/create_version"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Note Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/create_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:hint="@string/create_note"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/create_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_cancel"
            android:layout_margin="@dimen/activity_horizontal_margin"
            />
        <Button
            android:id="@+id/create_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_add"
            android:layout_margin="@dimen/activity_horizontal_margin"
            />
    </LinearLayout>

</LinearLayout>
